--- a/app/webroot/scss/_objects.sheet.scss
+++ b/app/webroot/scss/_objects.sheet.scss
@@ -16,6 +16,7 @@
     width: $douzeSeizieme;
     margin-left: $gutter;
     position: relative;
+    word-wrap: break-word;
 }
 
 .sheet__term {
